MIDDLE OF DEV